--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,13 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
-    "mongoose": "^5.9.7"
+    "fast-csv": "^4.1.3",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.9.7",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
@@ -16,6 +21,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "yarn run dev",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/main.js"
   }
 }
